--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@
   .dark {
     --color-primary: #318c89;
     --color-secondary: #1a2a27;
-    --color-tertiary: #b8d9d5;
+    --color-tertiary: #1a2a27;
     --color-foreground: #f8f8f8;
     --color-base: #1a2a27;
     --color-accent: #e65a50;
